Bug 779631 - Don't inline calls to setters on watched singleton objects. (r=dvander)