js/src/jit-test/tests/ion/bug779631.js
@@ -1,0 +1,9 @@
+var flag = 0;
+var a = {};
+Object.defineProperty(a, "value", {set: function(x) {}});
+a.watch("value", function(){flag++;});
+
+for(var i = 0; i < 100; i++) {
+    a.value = i;
+    assertEq(flag, i+1);
+}
